cluster_config_backup/2023_12_02/per_resource_api/validatingwebhookconfigurations.admissionregistration.k8s.io._.istiod-default-validator.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: "2023-11-16T23:18:08Z"
  generation: 2
  labels:
    app: istiod
    install.operator.istio.io/owning-resource: installed-state
    install.operator.istio.io/owning-resource-namespace: istio-system
    install.operator.istio.io/owning-resource-not-pruned: "true"
    istio: istiod
    istio.io/rev: default
    istio.io/tag: default
    operator.istio.io/component: Pilot
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.20.0
    release: istio
  name: istiod-default-validator
  resourceVersion: "15638"
  uid: c165a463-4120-4728-aec8-43939b9abfa9
webhooks:
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvRENDQWVTZ0F3SUJBZ0lRTVZNeENDM3g5UmptRlZEbzFTM1R2akFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFLRXcxamJIVnpkR1Z5TG14dlkyRnNNQjRYRFRJek1URXhOakl6TVRRME9Gb1hEVE16TVRFeApNekl6TVRRME9Gb3dHREVXTUJRR0ExVUVDaE1OWTJ4MWMzUmxjaTVzYjJOaGJEQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNYUpEc1dvRkpTeTc3UXZtNXVJZGNiM3llQzlDRHcwSktYSUR4OHUKSlFQQncvazhGL1U0a2dJWGdXNlpqbmFHWUh6TEtmN1REb0NLamRNR0E4blhJcGhDTWhUR1JHZ0ZJMGVra1dRegpwUTE3SkYwRnhIai [...]
    service:
      name: istiod
      namespace: istio-system
      path: /validate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.istio.io
  namespaceSelector: {}
  objectSelector:
    matchExpressions:
    - key: istio.io/rev
      operator: DoesNotExist
  rules:
  - apiGroups:
    - security.istio.io
    - networking.istio.io
    - telemetry.istio.io
    - extensions.istio.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*'
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
